Bug 92281 - FILEOPEN: Only western font is set for symbols in DOC files
Summary: FILEOPEN: Only western font is set for symbols in DOC files
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.2.2 release
Hardware: Other All
: medium normal
Assignee: Mark Hung
URL:
Whiteboard: target:5.1.0 target:4.4.5 target:5.0...
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-23 16:57 UTC by Mark Hung
Modified: 2016-10-25 19:23 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Few Wingding samples created with MSO 2010. (25.50 KB, application/msword)
2015-06-23 16:57 UTC, Mark Hung
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Hung 2015-06-23 16:57:22 UTC
Created attachment 116771 [details]
Few Wingding samples created with MSO 2010.

1. Set language to one of CJK ( ex, Chinese Traditional ).
2. Open the sample file, symbols in DOC file does not show up.
3. Observe that only Western font is set for the symbol, both CJK and CTL fonts are set to system default. And user has no way to change the character language to other than default.
Comment 1 Commit Notification 2015-06-30 07:40:41 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=203e3c0f1190473d2e587a0801dc9f3883a6874a

tdf#92281 - FILEOPEN: Only western font is set for symbols in DOC files

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Marc Kaulisch 2015-07-06 10:00:03 UTC
Hi Mark, you committed a fix to this bug, can this be closed as fixed now?
Anyway, I was not able to reproduce the bug in 5.0.0.2 64bit Windows
Comment 3 Mark Hung 2015-07-06 12:58:02 UTC
I'll back port the patch for this issue to 5.0.0 and 4.4 branch. 

Hi Marc, since the patch haven't been integrated to 5.0.0 yet. So you might have tested something different.
Comment 4 Commit Notification 2015-07-07 20:18:19 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ef8615158921edaf5f3f6ee61425c25499b3a3d2&h=libreoffice-4-4

tdf#92281 - FILEOPEN: Only western font is set for symbols in DOC files

It will be available in 4.4.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2015-07-09 07:44:58 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=991dd34d66dada90de0f5eb8f28deb74af8c5851&h=libreoffice-5-0

tdf#92281 - FILEOPEN: Only western font is set for symbols in DOC files

It will be available in 5.0.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.