tdf#92281 - FILEOPEN: Only western font is set for symbols in DOC files

Inserting a symbol in Writer set all fonts including CJK and CTL
to the same one. This patch makes the behavior consistent with that,
allows CJK and CTL user to see the symbols.

Change-Id: I7a61868e8078c81c68e471760f080b3ce7df589f
Reviewed-on: https://gerrit.libreoffice.org/16604
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Reviewed-on: https://gerrit.libreoffice.org/16871
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>